--- a/tools/planner.html
+++ b/tools/planner.html
@@ -770,7 +770,7 @@
 	<div class="main-container">
 		<div class="sidebar">
 			<div class="sidebar-header">
-				<h3>Strain Collection</h3>
+				<button class="btn btn-secondary">MANAGE</button>
 			</div>
 			
 			<div class="search-box">
