--- a/index.html
+++ b/index.html
@@ -433,12 +433,12 @@
 				</div>
 			</a>
 
-			<a href="/tools/winnerscircle.html" class="feature-card-link">
+			<a href="/tools/winnerslist.html" class="feature-card-link">
 				<div class="feature-card">
-					<div class="feature-img" style="background-image: url('/tools/img/WinnersCircle.jpg');"></div>
+					<div class="feature-img" style="background-image: url('/tools/img/WinnersList.jpg');"></div>
 					<div class="feature-content">
-						<h3>Winner's Circle</h3>
-						<p>Need to do a giveaway? Have a bunch of users in Discord waiting for a spin? Join the WINNER'S CIRCLE!</p>
+						<h3>Winner's List</h3>
+						<p>Need to do a giveaway? Have a bunch of users in Discord waiting for a prize? Join the WINNER'S LIST!</p>
 					</div>
 				</div>
 			</a>
