--- a/tools/winnerslist.html
+++ b/tools/winnerslist.html
@@ -795,6 +795,14 @@
             </form>
         </div>
     </div>
+
+	<!-- Audio elements for background music - MOVE THESE BEFORE THE SCRIPT TAG -->
+	<audio id="music-v1" loop>
+		<source src="/tools/audio/WinnerList_v1.mp3" type="audio/mpeg">
+	</audio>
+	<audio id="music-v2" loop>
+		<source src="/tools/audio/WinnerList_v2.mp3" type="audio/mpeg">
+	</audio>
     
     <!-- Confetti canvas -->
     <canvas id="confetti-canvas"></canvas>
@@ -1985,14 +1993,6 @@
         // Initialize on page load
         document.addEventListener('DOMContentLoaded', init);
     </script>
-
-	<!-- Audio elements for background music -->
-	<audio id="music-v1" loop>
-		<source src="/tools/audio/WinnerList_v1.mp3" type="audio/mpeg">
-	</audio>
-	<audio id="music-v2" loop>
-		<source src="/tools/audio/WinnerList_v2.mp3" type="audio/mpeg">
-	</audio>
 	
 </body>
 </html>
