--- a/index.html
+++ b/index.html
@@ -422,7 +422,18 @@
             <p>Your ultimate cannabis growing assistant. Track strains, get AI-powered grow help, create custom labels, and manage your grow spaces all in one place.</p>
         </section>
         
-		<section class="features"> 
+		<section class="features">
+
+			<a href="/tools/pathfinder.html" class="feature-card-link">
+				<div class="feature-card">
+					<div class="feature-img" style="background-image: url('/tools/img/PathFinder.jpg');"></div>
+					<div class="feature-content">
+						<h3>Green Path Finder</h3>
+						<p>Navigate your way from grey market to legitimate cannabis business with interactive decision paths, legal resources, and transition planning.</p>
+					</div>
+				</div>
+			</a>
+		
 			<a href="/tools/planner.html" class="feature-card-link">
 				<div class="feature-card">
 					<div class="feature-img" style="background-image: url('/tools/img/Planner.jpg');"></div>
