--- a/tools/writer.html
+++ b/tools/writer.html
@@ -131,6 +131,7 @@
 			font-family: inherit;
 			resize: vertical;
 			line-height: 1.5;
+			box-sizing: border-box;
 		}
 
 		textarea::placeholder {
