--- a/tools/tweets.html
+++ b/tools/tweets.html
@@ -297,6 +297,7 @@
             width: auto;
             margin: 0;
             transform: scale(1.2);
+			margin-right: 8px;
         }
 
         .checkbox-label {
@@ -371,7 +372,7 @@
                 <div class="form-group">
                     <label for="includeHashtags" class="checkbox-label">
                         <input type="checkbox" id="includeHashtags">
-                        Include hashtags in tweets
+                         Include hashtags in tweets
                     </label>
                     <div class="checkbox-help">
                         When unchecked, we'll use the full 280 characters for your message content
