--- a/partnership.html
+++ b/partnership.html
@@ -598,7 +598,7 @@
                             <span class="partner-id">Grower A</span>
                             <span class="example-amount">$370</span>
                         </div>
-                        <div class="example-desc">Technology upgrade → Now leading breeder program for THCA company</div>
+                        <div class="example-desc">Technology upgrade → Enabled career advancement in breeding sector</div>
                     </div>
                     <div class="example-item">
                         <div class="example-header">
