--- a/partnership.html
+++ b/partnership.html
@@ -547,20 +547,20 @@
                 <h3>Program Impact</h3>
                 <div class="stats-grid">
                     <div class="stat-card">
+                        <div class="stat-number">5</div>
+                        <div class="stat-label">Total Partnerships</div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-number">$4,000+</div>
+                        <div class="stat-label">Value Provided</div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-number">5</div>
+                        <div class="stat-label">Projects Launched</div>
+                    </div>
+                    <div class="stat-card">
                         <div class="stat-number">3</div>
-                        <div class="stat-label">Active Partnerships</div>
-                    </div>
-                    <div class="stat-card">
-                        <div class="stat-number">$969</div>
-                        <div class="stat-label">Support Provided</div>
-                    </div>
-                    <div class="stat-card">
-                        <div class="stat-number">3</div>
-                        <div class="stat-label">Projects Advanced</div>
-                    </div>
-                    <div class="stat-card">
-                        <div class="stat-number">100%</div>
-                        <div class="stat-label">Success Rate</div>
+                        <div class="stat-label">Currently Active</div>
                     </div>
                 </div>
             </div>
@@ -574,16 +574,20 @@
                     </div>
                     <div class="chart-bars">
                         <div class="chart-bar">
-                            <div class="bar-fill equipment" style="width: 38%"></div>
-                            <div class="bar-label">Equipment & Technology (38%)</div>
+                            <div class="bar-fill equipment" style="width: 25%"></div>
+                            <div class="bar-label">Equipment & Technology (25%)</div>
                         </div>
                         <div class="chart-bar">
-                            <div class="bar-fill emergency" style="width: 45%"></div>
-                            <div class="bar-label">Operational/Emergency (45%)</div>
+                            <div class="bar-fill emergency" style="width: 30%"></div>
+                            <div class="bar-label">Operational/Emergency (30%)</div>
                         </div>
                         <div class="chart-bar">
-                            <div class="bar-fill infrastructure" style="width: 17%"></div>
-                            <div class="bar-label">Infrastructure (17%)</div>
+                            <div class="bar-fill infrastructure" style="width: 10%"></div>
+                            <div class="bar-label">Infrastructure (10%)</div>
+                        </div>
+                        <div class="chart-bar">
+                            <div class="bar-fill supplies" style="width: 35%"></div>
+                            <div class="bar-label">Business Development (35%)</div>
                         </div>
                     </div>
                 </div>
@@ -596,30 +600,30 @@
                     <div class="example-item">
                         <div class="example-header">
                             <span class="partner-id">Grower A</span>
-                            <span class="example-amount">$370</span>
+                            <span class="example-amount">$3,370</span>
                         </div>
-                        <div class="example-desc">Technology upgrade → Enabled career advancement in breeding sector</div>
+                        <div class="example-desc">Technology upgrade + custom website → Advanced to leadership position in genetics work</div>
                     </div>
                     <div class="example-item">
                         <div class="example-header">
                             <span class="partner-id">Grower B</span>
-                            <span class="example-amount">$275</span>
+                            <span class="example-amount">$440</span>
                         </div>
-                        <div class="example-desc">Operational support → Maintained lighting, prevented crop loss</div>
+                        <div class="example-desc">Operational support → Maintained growing operations and safety</div>
                     </div>
                     <div class="example-item">
                         <div class="example-header">
                             <span class="partner-id">Grower C</span>
                             <span class="example-amount">$159</span>
                         </div>
-                        <div class="example-desc">Infrastructure expansion → Increased growing capacity and yields</div>
+                        <div class="example-desc">Infrastructure expansion → Increased growing capacity</div>
                     </div>
                     <div class="example-item">
                         <div class="example-header">
-                            <span class="partner-id">Grower B</span>
-                            <span class="example-amount">$165</span>
+                            <span class="partner-id">Growers D & E</span>
+                            <span class="example-amount">$6,000</span>
                         </div>
-                        <div class="example-desc">Transportation safety → Maintained operational capability</div>
+                        <div class="example-desc">Custom website development → Professional business platforms created</div>
                     </div>
                 </div>
             </div>
