--- a/partnership.html
+++ b/partnership.html
@@ -551,7 +551,7 @@
                         <div class="stat-label">Total Partnerships</div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-number">$4,000+</div>
+                        <div class="stat-number">$9,969</div>
                         <div class="stat-label">Value Provided</div>
                     </div>
                     <div class="stat-card">
