--- a/index.html
+++ b/index.html
@@ -582,7 +582,8 @@
         <p>For educational and informational purposes only.</p>
 		<p>
 			<a href="/policy.html" style="color: white; margin: 0 10px; text-decoration: underline;">Privacy Policy</a> | 
-			<a href="/terms.html" style="color: white; margin: 0 10px; text-decoration: underline;">Terms of Service</a>
+			<a href="/terms.html" style="color: white; margin: 0 10px; text-decoration: underline;">Terms of Service</a> |
+			<a href="/tools/partnerships.html" style="color: white; margin: 0 10px; text-decoration: underline;">Partnerships</a>
 		</p>		
     </footer>
     
