--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
 		<p>
 			<a href="/policy.html" style="color: white; margin: 0 10px; text-decoration: underline;">Privacy Policy</a> | 
 			<a href="/terms.html" style="color: white; margin: 0 10px; text-decoration: underline;">Terms of Service</a> |
-			<a href="/tools/partnerships.html" style="color: white; margin: 0 10px; text-decoration: underline;">Partnerships</a>
+			<a href="/partnership.html" style="color: white; margin: 0 10px; text-decoration: underline;">Partnerships</a>
 		</p>		
     </footer>
     
