--- a/partnership.html
+++ b/partnership.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<meta property="og:title" content="Growing Partnership Program - StrainNavigator">
+	<meta property="og:description" content="Supporting passionate cannabis community members through resource partnerships and business development.">
+	<meta property="og:image" content="https://www.strainnavigator.com/partnership-preview.png">
+	
     <title>Growing Partnership Program - StrainNavigator</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
