--- a/partnership.html
+++ b/partnership.html
@@ -6,14 +6,14 @@
 	
 	<meta property="og:title" content="Growing Partnership Program - StrainNavigator">
 	<meta property="og:description" content="Supporting passionate cannabis community members through resource partnerships and business development.">
-	<meta property="og:image" content="https://www.strainnavigator.com/partnership-preview.jpg">
+	<meta property="og:image" content="https://www.strainnavigator.com/partnership-preview.png">
 	<meta property="og:url" content="https://www.strainnavigator.com/partnership.html">
 	<meta property="og:type" content="website">
 
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Growing Partnership Program - StrainNavigator">
 	<meta name="twitter:description" content="Supporting passionate cannabis community members through resource partnerships and business development.">
-	<meta name="twitter:image" content="https://www.strainnavigator.com/partnership-preview.jpg">
+	<meta name="twitter:image" content="https://www.strainnavigator.com/partnership-preview.png">
 	
     <title>Growing Partnership Program - StrainNavigator</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
