--- a/partnership.html
+++ b/partnership.html
@@ -1200,7 +1200,7 @@
 				// Build conversation context
 				let conversationContext = '';
 				if (advisorHistory.length > 1) {
-					const recentHistory = advisorHistory.slice(-4); // Last 4 messages for context
+					const recentHistory = advisorHistory.slice(-4);
 					conversationContext = recentHistory.map(msg => 
 						`${msg.role === 'user' ? 'User' : 'Assistant'}: ${msg.content}`
 					).join('\n');
@@ -1212,7 +1212,7 @@
 					`${systemPrompt}\n\nUser question: ${message}\n\nResponse:`;
 				
 				const encodedPrompt = encodeURIComponent(fullPrompt);
-				const response = await fetch(`https://text.pollinations.ai/${encodedPrompt}?model=${selectedModel}&referrer=www.strainnavigator.com&temperature=0.7`);
+				const response = await fetch(`https://text.pollinations.ai/${encodedPrompt}?model=${selectedModel}&referrer=www.strainnavigator.com`);
 				
 				if (!response.ok) {
 					throw new Error(`HTTP error! status: ${response.status}`);
