--- a/partnership.html
+++ b/partnership.html
@@ -758,15 +758,38 @@
                 </div>
             </div>
 
-            <div class="info-section">
-                <h3>What We're Looking For</h3>
-                <ul style="margin-left: 20px; margin-top: 10px;">
-                    <li>Passionate growers working on interesting projects</li>
-                    <li>People who value learning and improving their craft</li>
-                    <li>Those who could benefit from resource support to reach their goals</li>
-                    <li>Legal compliance in your jurisdiction</li>
-                </ul>
-            </div>
+			<div class="info-section">
+				<div style="display: flex; align-items: flex-start; gap: 30px;">
+					<div style="flex: 1;">
+						<h3>What We're Looking For</h3>
+						<ul style="margin-left: 20px; margin-top: 10px;">
+							<li>Passionate growers working on interesting projects</li>
+							<li>People who value learning and improving their craft</li>
+							<li>Those who could benefit from resource support to reach their goals</li>
+							<li>Legal compliance in your jurisdiction</li>
+						</ul>
+					</div>
+					<div class="partnership-card-display">
+						<div class="card-header">
+							<i class="fas fa-cannabis"></i>
+							<span>StrainNavigator</span>
+						</div>
+						<div class="card-title">Growing Partnership</div>
+						<div class="card-number">1234 5678 9101 2345</div>
+						<div class="card-details">
+							<div>
+								<div class="card-label">EXP</div>
+								<div>01/30</div>
+							</div>
+							<div>
+								<div class="card-label">SEC</div>
+								<div>123</div>
+							</div>
+						</div>
+						<div class="card-footer">PARTNER MEMBER</div>
+					</div>
+				</div>
+			</div>
 
             <p style="margin-top: 30px; text-align: center; font-style: italic;">
                 This is about recognizing potential and providing the support to help you develop it. 
