--- a/partnership.html
+++ b/partnership.html
@@ -564,6 +564,81 @@
 			animation: dots 1.5s infinite;
 		}
 
+		.partnership-card-display {
+			width: 320px;
+			height: 200px;
+			background: linear-gradient(135deg, var(--dark-green) 0%, var(--primary-green) 100%);
+			border-radius: 12px;
+			padding: 24px;
+			color: white;
+			font-family: 'Arial', sans-serif;
+			box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+			position: relative;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+		}
+
+		.card-header {
+			display: flex;
+			justify-content: space-between;
+			align-items: flex-start;
+		}
+
+		.card-header i {
+			font-size: 24px;
+		}
+
+		.card-title {
+			font-size: 12px;
+			color: #e8f5e8;
+			text-transform: uppercase;
+			letter-spacing: 1px;
+			margin-top: -10px;
+		}
+
+		.card-number {
+			font-size: 22px;
+			font-weight: 500;
+			letter-spacing: 3px;
+			margin: 20px 0;
+			font-family: 'Courier New', monospace;
+		}
+
+		.card-details {
+			display: flex;
+			gap: 40px;
+			align-items: flex-end;
+		}
+
+		.card-details > div {
+			display: flex;
+			flex-direction: column;
+		}
+
+		.card-label {
+			font-size: 9px;
+			color: #e8f5e8;
+			text-transform: uppercase;
+			letter-spacing: 1px;
+			margin-bottom: 4px;
+		}
+
+		.card-details > div > div:last-child {
+			font-size: 14px;
+			font-weight: 500;
+		}
+
+		.card-footer {
+			position: absolute;
+			bottom: 24px;
+			right: 24px;
+			font-size: 10px;
+			color: #e8f5e8;
+			text-transform: uppercase;
+			letter-spacing: 1px;
+		}
+
 		@keyframes dots {
 			0%, 20% { content: '.'; }
 			40% { content: '..'; }
