--- a/partnership.html
+++ b/partnership.html
@@ -565,11 +565,11 @@
 		}
 
 		.partnership-card-display {
-			width: 320px;
-			height: 200px;
+			width: 340px;
+			height: 215px;
 			background: linear-gradient(135deg, var(--dark-green) 0%, var(--primary-green) 100%);
 			border-radius: 12px;
-			padding: 24px;
+			padding: 20px;
 			color: white;
 			font-family: 'Arial', sans-serif;
 			box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
@@ -582,33 +582,37 @@
 		.card-header {
 			display: flex;
 			justify-content: space-between;
-			align-items: flex-start;
+			align-items: center;
+			margin-bottom: 10px;
 		}
 
 		.card-header i {
-			font-size: 24px;
+			font-size: 20px;
+			margin-right: 8px;
 		}
 
 		.card-title {
-			font-size: 12px;
+			font-size: 11px;
 			color: #e8f5e8;
 			text-transform: uppercase;
 			letter-spacing: 1px;
-			margin-top: -10px;
+			font-weight: 500;
 		}
 
 		.card-number {
-			font-size: 22px;
-			font-weight: 500;
-			letter-spacing: 3px;
-			margin: 20px 0;
-			font-family: 'Courier New', monospace;
+			font-size: 20px !important;
+			font-weight: 500 !important;
+			letter-spacing: 2px !important;
+			margin: 25px 0 !important;
+			font-family: 'Courier New', monospace !important;
+			white-space: nowrap !important;
 		}
 
 		.card-details {
 			display: flex;
-			gap: 40px;
-			align-items: flex-end;
+			gap: 60px;
+			align-items: flex-start;
+			margin-bottom: 15px;
 		}
 
 		.card-details > div {
@@ -617,23 +621,24 @@
 		}
 
 		.card-label {
-			font-size: 9px;
+			font-size: 8px;
 			color: #e8f5e8;
 			text-transform: uppercase;
 			letter-spacing: 1px;
-			margin-bottom: 4px;
+			margin-bottom: 3px;
 		}
 
 		.card-details > div > div:last-child {
-			font-size: 14px;
+			font-size: 13px;
 			font-weight: 500;
+			font-family: 'Courier New', monospace;
 		}
 
 		.card-footer {
 			position: absolute;
-			bottom: 24px;
-			right: 24px;
-			font-size: 10px;
+			bottom: 20px;
+			right: 20px;
+			font-size: 9px;
 			color: #e8f5e8;
 			text-transform: uppercase;
 			letter-spacing: 1px;
