--- a/partnership.html
+++ b/partnership.html
@@ -734,6 +734,7 @@
             <button class="tab-button active" onclick="showTab('about')">About Program</button>
             <button class="tab-button" onclick="showTab('apply')">Apply</button>
 			<button class="tab-button" onclick="showTab('advisor')">Life Coach</button>
+			<button class="tab-button" onclick="window.open('cardgen.html', '_blank')">Design Card</button>
             <button class="tab-button" onclick="showTab('dashboard')" id="dashboardTab" style="display: none;">Dashboard</button>
         </div>
 
