--- a/cardgen.html
+++ b/cardgen.html
@@ -471,6 +471,16 @@
         </div>
     </main>
 
+	<footer style="background-color: var(--dark-green); color: white; text-align: center; padding: 2rem; margin-top: 2rem;">
+		<p style="margin-bottom: 1rem;">&copy; 2025 StrainNavigator. All rights reserved.</p>
+		<p style="margin-bottom: 1rem;">For educational and informational purposes only.</p>
+		<p style="margin-bottom: 0;">
+			<a href="/policy.html" style="color: white; margin: 0 10px; text-decoration: underline;">Privacy Policy</a> | 
+			<a href="/terms.html" style="color: white; margin: 0 10px; text-decoration: underline;">Terms of Service</a> |
+			<a href="/partnership.html" style="color: white; margin: 0 10px; text-decoration: underline;">Partnerships</a>
+		</p>
+	</footer>
+
     <script>
 		let backgroundImage = null;
         let selectedColors = '#1b5e20,#2e7d32';
