--- a/partnership.html
+++ b/partnership.html
@@ -1083,10 +1083,15 @@
         </div>
     </div>
 
-    <footer>
-        <p>&copy; 2025 StrainNavigator. All rights reserved.</p>
-        <p>For educational and informational purposes only.</p>
-    </footer>
+	<footer style="background-color: var(--dark-green); color: white; text-align: center; padding: 2rem; margin-top: 2rem;">
+		<p style="margin-bottom: 1rem;">&copy; 2025 StrainNavigator. All rights reserved.</p>
+		<p style="margin-bottom: 1rem;">For educational and informational purposes only.</p>
+		<p style="margin-bottom: 0;">
+			<a href="/policy.html" style="color: white; margin: 0 10px; text-decoration: underline;">Privacy Policy</a> | 
+			<a href="/terms.html" style="color: white; margin: 0 10px; text-decoration: underline;">Terms of Service</a> |
+			<a href="/partnership.html" style="color: white; margin: 0 10px; text-decoration: underline;">Partnerships</a>
+		</p>
+	</footer>
     
     <script>
         // Navigation toggle functionality
