--- a/index.html
+++ b/index.html
@@ -90,7 +90,11 @@
             height: 40px;
             margin-right: 10px;
         }
-        
+
+		.logo i {
+			margin-right: 10px;
+		}        
+		
         .nav-links {
             display: flex;
             list-style: none;
