--- a/partnership.html
+++ b/partnership.html
@@ -734,7 +734,7 @@
             <button class="tab-button active" onclick="showTab('about')">About Program</button>
             <button class="tab-button" onclick="showTab('apply')">Apply</button>
 			<button class="tab-button" onclick="showTab('advisor')">Life Coach</button>
-			<button class="tab-button" onclick="window.open('cardgen.html', '_blank')">Design Card</button>
+			<button class="tab-button" onclick="window.open('cardgen.html')">Design Card</button>
             <button class="tab-button" onclick="showTab('dashboard')" id="dashboardTab" style="display: none;">Dashboard</button>
         </div>
 
@@ -770,7 +770,7 @@
                         <div class="stat-label">Projects Launched</div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-number">3</div>
+                        <div class="stat-number">2</div>
                         <div class="stat-label">Currently Active</div>
                     </div>
                 </div>
