--- a/partnership.html
+++ b/partnership.html
@@ -770,8 +770,8 @@
                         <div class="stat-label">Value Provided</div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-number">5</div>
-                        <div class="stat-label">Projects Launched</div>
+                        <div class="stat-number">7</div>
+                        <div class="stat-label">Projects Assisted</div>
                     </div>
                     <div class="stat-card">
                         <div class="stat-number">2</div>
