--- a/vpn.html
+++ b/vpn.html
@@ -554,7 +554,7 @@
         <section class="hero">
             <i class="fas fa-shield-alt shield-icon"></i>
             <h1>SecureGreen VPN</h1>
-            <p>Privacy-focused VPN services designed specifically for the cannabis community. Browse securely, protect your transactions, and maintain your privacy with servers optimized for discretion.</p>
+            <p>Privacy-focused VPN services designed for legal botanical research, hemp genetics preservation, and alternative wellness exploration. Protect your research activities, secure your business communications, and maintain discretion while shopping for legal hemp derivatives and wellness products.</p>
             <div class="cta-section">
                 <button class="cta-button" onclick="showPreRegister()">
                     <i class="fas fa-user-plus"></i> Pre-Register Now
@@ -567,7 +567,7 @@
 
         <section class="features-section">
             <h2 class="section-title">Why Choose SecureGreen VPN?</h2>
-            <p class="section-subtitle">Built with the cannabis community's unique privacy needs in mind</p>
+            <p class="section-subtitle">Built for researchers, growers, and wellness enthusiasts who value privacy and legal compliance</p>
             
             <div class="features-grid">
                 <div class="feature-card">
@@ -576,11 +576,23 @@
                     <p>Servers in privacy-friendly jurisdictions including Romania, Sweden, and Switzerland. No logs, no tracking, no compromises on your privacy.</p>
                 </div>
 
-                <div class="feature-card">
-                    <i class="fas fa-users"></i>
-                    <h3>Cannabis Community Focus</h3>
-                    <p>Understanding the unique needs of cannabis enthusiasts, from THCa research to secure marketplace browsing. We get it because we're part of it.</p>
-                </div>
+				<div class="feature-card">
+					<i class="fas fa-seedling"></i>
+					<h3>Hemp Research Protection</h3>
+					<p>Secure your THCa hemp research, genetics preservation, and cultivation studies. Protect your intellectual property and maintain privacy while exploring legal hemp derivatives and compliance resources.</p>
+				</div>
+
+				<div class="feature-card">
+					<i class="fas fa-leaf"></i>
+					<h3>Alternative Wellness Privacy</h3>
+					<p>Browse legal botanical supplements, mushroom wellness products, kratom research, and other alternative wellness options with complete discretion. No judgment, just privacy for your wellness journey.</p>
+				</div>
+
+				<div class="feature-card">
+					<i class="fas fa-dna"></i>
+					<h3>Genetics Business Security</h3>
+					<p>Protecting hemp breeders, seed businesses, and genetics researchers. Secure your breeder-to-breeder communications, protect your strain databases, and keep your business operations private.</p>
+				</div>
 
                 <div class="feature-card">
                     <i class="fas fa-lock"></i>
@@ -694,8 +706,8 @@
         </section>
 
         <section class="community-section">
-            <h2 class="section-title">Join the SecureGreen Community</h2>
-            <p class="section-subtitle">More than just a VPN - you're joining a privacy-focused cannabis community</p>
+			<h2 class="section-title">Join the Botanical Research Community</h2>
+			<p class="section-subtitle">More than just a VPN - you're joining a privacy-focused community of researchers, growers, and wellness enthusiasts</p>
             
             <div class="community-benefits">
                 <div class="benefit-item">
@@ -716,11 +728,11 @@
                     <p>Get notified about privacy threats, legal changes, and security best practices relevant to the cannabis community.</p>
                 </div>
 
-                <div class="benefit-item">
-                    <i class="fas fa-gift"></i>
-                    <h4>Member Perks</h4>
-                    <p>Exclusive discounts with cannabis-friendly businesses and early access to privacy tools and services.</p>
-                </div>
+				<div class="benefit-item">
+					<i class="fas fa-microscope"></i>
+					<h4>Research Resources</h4>
+					<p>Access to legal compliance guides, hemp research databases, and wellness product directories - all while maintaining your privacy.</p>
+				</div>
             </div>
         </section>
 
