--- a/tools/GreenHouseTent.html
+++ b/tools/GreenHouseTent.html
@@ -299,6 +299,9 @@
 			grid-template-columns: repeat(3, 1fr);
 			gap: 2rem;
 			margin-top: 2rem;
+			max-width: 1200px;
+			margin-left: auto;
+			margin-right: auto;
 		}
         
         .feature-item {
@@ -336,6 +339,9 @@
 			grid-template-columns: repeat(3, 1fr);
 			gap: 1.5rem;
 			margin-top: 2rem;
+			max-width: 1200px;
+			margin-left: auto;
+			margin-right: auto;
 		}
         
         .accessory-card {
