--- a/tools/labels.html
+++ b/tools/labels.html
@@ -1486,7 +1486,7 @@
 						},
 						body: JSON.stringify({
 							messages: messages,
-							model: 'openai',
+							model: 'openai-fast',
 							private: true,
 							jsonMode: false,
 							seed: Math.floor(Math.random() * 1000000)
